# statica

./: .gitignore  pyproject.toml
src/statica/: __main__.py  binomial.py  cli.py
