[tool.poetry]
name = "statica"
version = "0.1.0"
description = ""
authors = ["Volodymyr But <vbut.dev+git@gmail.com>"]
packages = [{ include = "statica", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = "^8.1.7"
logging = "^0.4.9.6"
scipy = "^1.14.1"
numpy = "^2.1.3"

[tool.poetry.scripts]
statica = "statica.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
